--- a/config.yaml
+++ b/config.yaml
@@ -13,20 +13,6 @@ api_config: &api_config
   apiBase: "http://your-api-base:8000/v1"   # ← KENDI API ADRESINIZI YAZIN
   apiKey: "your-api-key"                     # ← KENDI API KEY'INIZI YAZIN
 
-# --------------------------------------------------------------------------
-# SSL & PROXY AYARLARI:
-# - verifySsl: false → self-signed sertifika olan ortamlarda gerekli
-# - caBundlePath → Kurumsal CA sertifikasi (varsa)
-# - noProxy → API domain'ini proxy'den muaf tut
-# --------------------------------------------------------------------------
-
-request_defaults: &request_defaults
-  timeout: 600000
-  verifySsl: false
-  # caBundlePath: /path/to/ca-bundle.crt   # Gerekirse CA sertifikasi ekleyin
-  # noProxy:                                # Gerekirse proxy bypass ekleyin
-  #   - "your-api-domain.com"
-
 # ============================================================================
 # GLM-5 SAMPLING PARAMETERS (vLLM Backend)
 # ============================================================================
@@ -44,7 +30,7 @@ glm_params: &glm_params
   contextLength: 131072
 
 kodlama_extra: &kodlama_extra
-  frequency_penalty: 0.1
+  frequency_penalty: 0.2
   presence_penalty: 0.1
   top_p: 0.95
   repetition_penalty: 1.1
@@ -89,22 +75,6 @@ kimi_params: &kimi_params
 kimi_extra: &kimi_extra
   top_p: 0.95
   truncate_prompt_tokens: 97000       # 131072 - 32768 = 98304, guvenli 97K
-
-# ============================================================================
-# OPTIONAL: OPENAI REASONING EFFORT (thinking_effort)
-# ============================================================================
-# OpenAI Chat Completions parametresi: reasoning_effort
-# Destekli modellerde degerler: low | medium | high
-# Kullanim:
-#   requestOptions:
-#     extraBodyProperties:
-#       <<: *openai_reasoning_extra
-# UYARI: Bu parametre SADECE OpenAI o-serisi modeller icindir.
-# Kimi-K2.5'te reasoning_effort DESTEKLENMEZ (binary ON/OFF, chat_template_kwargs ile).
-# GLM-4.7'de de desteklenmez. Yanlislikla eklemeyin.
-# ============================================================================
-openai_reasoning_extra: &openai_reasoning_extra
-  reasoning_effort: medium
 
 # ============================================================================
 # QUICK MODEL PARAMETERS (Qwen3-Next-80B-A3B)
@@ -157,7 +127,6 @@ models:
     defaultCompletionOptions:
       <<: *glm_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kodlama_extra
     chatOptions:
@@ -208,7 +177,6 @@ models:
     defaultCompletionOptions:
       <<: *glm_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kodlama_extra
     chatOptions:
@@ -262,7 +230,6 @@ models:
     defaultCompletionOptions:
       <<: *glm_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kodlama_extra
     chatOptions:
@@ -316,7 +283,6 @@ models:
     defaultCompletionOptions:
       <<: *glm_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kodlama_extra
     chatOptions:
@@ -379,12 +345,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        VHDL/Verilog ve Vivado dijital tasarim uzmani (Kimi-K2.5, 128K context).
+        VHDL/Verilog ve Vivado dijital tasarim uzmani.
 
         UZMANLIK ALANLARI:
         - VHDL/Verilog/SystemVerilog senteze uygun kodlama
@@ -397,7 +362,7 @@ models:
         - Sentez sonucunu ongorerek kod yaz
         - Turkce aciklama, Ingilizce teknik terimler
       baseAgentSystemMessage: |
-        FPGA RTL Engineer - Agent modu (Kimi-K2.5).
+        FPGA RTL Engineer - Agent modu.
 
         KARAR AGACI:
         ┌─ Yeni modul → create_new_file, TB SADECE istenirse ayri dosya
@@ -416,12 +381,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        Vitis IDE ve bare-metal C/C++ uzmani (Kimi-K2.5, 128K context).
+        Vitis IDE ve bare-metal C/C++ uzmani.
 
         UZMANLIK ALANLARI:
         - Xilinx IP driver API, interrupt/ISR, DMA pattern'leri
@@ -432,7 +396,7 @@ models:
         - Once mantik, sonra kod
         - Turkce aciklama, Ingilizce teknik terimler
       baseAgentSystemMessage: |
-        Embedded C/C++ Engineer - Agent modu (Kimi-K2.5).
+        Embedded C/C++ Engineer - Agent modu.
 
         KARAR AGACI:
         ┌─ Yeni driver → .h + .c AYRI, Xilinx pattern init fonksiyonu
@@ -451,12 +415,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        C#/.NET, WPF ve modern .NET uzmani (Kimi-K2.5, 128K context).
+        C#/.NET, WPF ve modern .NET uzmani.
 
         UZMANLIK ALANLARI:
         - Modern C#, async/await, WPF MVVM, thread-safety
@@ -467,7 +430,7 @@ models:
         - Once interface/contract, sonra implementation
         - Turkce aciklama, Ingilizce teknik terimler
       baseAgentSystemMessage: |
-        C#/.NET Engineer - Agent modu (Kimi-K2.5).
+        C#/.NET Engineer - Agent modu.
 
         KARAR AGACI:
         ┌─ Yeni servis → Interface + Implementation AYRI + DI registration
@@ -486,12 +449,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        Python otomasyon, scripting ve veri isleme uzmani (Kimi-K2.5, 128K context).
+        Python otomasyon, scripting ve veri isleme uzmani.
 
         UZMANLIK ALANLARI:
         - PEP 8, type hints, async/await, pathlib
@@ -501,7 +463,7 @@ models:
         - DRY, Explicit > Implicit, Readability counts
         - Turkce aciklama, Ingilizce teknik terimler
       baseAgentSystemMessage: |
-        Python Engineer - Agent modu (Kimi-K2.5).
+        Python Engineer - Agent modu.
 
         KARAR AGACI:
         ┌─ Yeni modul → create_new_file, __main__ guard
@@ -520,12 +482,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        Teknik dokumantasyon uzmani (Kimi-K2.5, 128K context).
+        Teknik dokumantasyon uzmani.
 
         UZMANLIK ALANLARI:
         - Markdown, README, CHANGELOG, teknik dokumantasyon
@@ -539,7 +500,7 @@ models:
         - Placeholder YASAK
         - TUM aciklamalar TURKCE, teknik terimler Ingilizce kalabilir
       baseAgentSystemMessage: |
-        Teknik Dokumantasyon Uzmani - Agent modu (Kimi-K2.5).
+        Teknik Dokumantasyon Uzmani - Agent modu.
 
         KARAR AGACI:
         ┌─ Yeni dokuman → create_new_file
@@ -558,12 +519,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        Devre semasi, blok diyagram, Excel ve gorsel teknik dokuman okuma uzmani (Kimi-K2.5, 128K context).
+        Devre semasi, blok diyagram, Excel ve gorsel teknik dokuman okuma uzmani.
 
         UZMANLIK ALANLARI:
         - Devre semasi (schematic) okuma ve yorumlama
@@ -579,7 +539,7 @@ models:
         - Belirsiz elemanlari acikca belirt, varsayim yapma
         - Turkce aciklama, Ingilizce teknik terimler (IC, pin, net, bus)
       baseAgentSystemMessage: |
-        Schematic Engineer - Agent modu (Kimi-K2.5, gorsel destekli).
+        Schematic Engineer - Agent modu (gorsel destekli).
 
         KARAR AGACI:
         ┌─ Sematik/gorsel analizi → Elemanlari listele → Baglantilari cikar
@@ -598,12 +558,11 @@ models:
     defaultCompletionOptions:
       <<: *kimi_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *kimi_extra
     chatOptions:
       baseSystemMessage: |
-        Git versiyon kontrol ve repository yonetimi uzmani (Kimi-K2.5, 128K context).
+        Git versiyon kontrol ve repository yonetimi uzmani.
 
         UZMANLIK ALANLARI:
         - Git temelleri: commit, branch, merge, rebase, cherry-pick
@@ -622,7 +581,7 @@ models:
         - Karmasik merge/rebase islemlerinde adim adim rehberlik et
         - Turkce aciklama, Ingilizce teknik terimler (commit, branch, merge, rebase)
       baseAgentSystemMessage: |
-        Git Expert - Agent modu (Kimi-K2.5).
+        Git Expert - Agent modu.
 
         KARAR AGACI:
         ┌─ Durum analizi → git status, git log, git diff
@@ -653,12 +612,11 @@ models:
     defaultCompletionOptions:
       <<: *quick_params
     requestOptions:
-      <<: *request_defaults
       extraBodyProperties:
         <<: *quick_extra
     chatOptions:
       baseSystemMessage: |
-        Hizli genel amacli yazilim muhendisi (Qwen3, 262K context, 3B aktif MoE).
+        Hizli genel amacli yazilim muhendisi.
 
         ROL: Hizli ve dogru temel isler.
         - Bug fix, syntax duzeltme, format degisikligi
@@ -675,7 +633,7 @@ models:
         - Gereksiz aciklama YAPMA
         - Turkce aciklama, Ingilizce teknik terimler
       baseAgentSystemMessage: |
-        Hizli Genel Muhendis - Agent modu (Qwen3, 3B aktif MoE).
+        Hizli Genel Muhendis - Agent modu.
 
         HIZLI KARAR AGACI:
         ┌─ Kucuk degisiklik → Hemen uygula
@@ -701,8 +659,6 @@ models:
     roles: [rerank]
     defaultCompletionOptions:
       <<: *rerank_params
-    requestOptions:
-      <<: *request_defaults
 
   # --------------------------------------------------------------------------
   # 14. Embedding-Model
@@ -711,8 +667,6 @@ models:
     <<: *api_config
     model: Qwen3-Embedding-8B
     roles: [embed]
-    requestOptions:
-      <<: *request_defaults
     embedOptions:
       maxChunkSize: 1024
       maxBatchSize: 128
@@ -739,8 +693,16 @@ context:
   - provider: problems
 
 # ============================================================================
-# NOT: Global requestOptions KALDIRILDI.
-# Continue config.yaml referansinda requestOptions ust seviye alan degil.
-# Tum ayarlar model bazli request_defaults anchor'i uzerinden uygulanir.
-# caBundlePath artik request_defaults icerisinde.
+# GLOBAL REQUEST OPTIONS
 # ============================================================================
+# Tum modellere uygulanan ortak istek ayarlari.
+# Model bazli requestOptions (extraBodyProperties) bu ayarlari override etmez,
+# Continue bunlari merge eder.
+# ============================================================================
+
+requestOptions:
+  caBundlePath: /path/to/ca-bundle.crt
+  verifySsl: true
+  timeout: 600000
+  retries: 3
+  retryDelay: 3000
